fixed gap between card and project

--- a/frontend/src/components/Dashboard/AnalyticCards/Projects/index.module.css
+++ b/frontend/src/components/Dashboard/AnalyticCards/Projects/index.module.css
@@ -12,19 +12,24 @@
   display: flex !important;
   justify-content: space-between !important;
   margin-bottom: 12px !important;
+  align-items: center;
 }
 
 .headingText {
   font-weight: 600 !important;
   color: #333 !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .addButton {
   border: 1px solid !important;
   background-color: #143351 !important;
   color: white !important;
-  border-radius: 12px !important;
-  padding: 6px 12px !important;
+  border-radius: 14px !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  padding: 0px 12px !important;
+  text-transform: none !important;
+  height: 35px;
 }
 
 .icon {
@@ -37,9 +42,13 @@
 }
 
 .headerCell {
-  font-weight: 600 !important;
+  font-weight: 550 !important;
   white-space: nowrap !important;
   border-bottom: none !important;
+  color: #7f7f7f !important;
+  text-align: center !important;
+  /* border:1px solid gray !important */
+ background-color:rgb(245 245 245) !important;
 }
 
 .tableRow {
