--- a/frontend/src/components/Dashboard/DeskTimeHeader/index.module.css
+++ b/frontend/src/components/Dashboard/DeskTimeHeader/index.module.css
@@ -19,21 +19,35 @@
 
 .toggleButton {
   text-transform: capitalize !important;
-  font-weight: 500 !important;
+  font-weight: 600 !important;
   color: #333333 !important;
   background-color: #ffffff !important;
+  font-family: sans-serif !important;
+  padding: 6px 10px !important;
+
 }
 
 .active {
   color: #ffffff !important;
   background-color: #143352 !important;
   transition: 0.3s ease-in-out !important;
+  font-family: sans-serif !important;
+
 }
 
 .toggleButton:hover {
-  background-color: #1564bf !important;
+  background-color: #e1dfdf !important;
+  color: #143352 !important;
   transition: 0.3s ease-in-out !important;
+  font-family: sans-serif !important;
 
+
+}
+
+.active:hover {
+  color: #ffffff !important;
+  background-color: #143352 !important;
+  transition: 0.3s ease-in-out !important;
 }
 
 .datePicker {
